--- a/index.html
+++ b/index.html
@@ -428,7 +428,8 @@
 
 			<div class="row justify-content-center mt-5">
 				<div class="col-md-6 text-center ftco-animate">
-					<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+					<p><a href="https://docs.google.com/document/d/1uHxZB4Z87udIPFJ48pTBOTO5zB073mo_aNENfaCrn3M/edit?usp=sharing"
+							class="btn btn-primary py-4 px-5">Download CV</a></p>
 				</div>
 			</div>
 		</div>
