--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 									const typingTexts = [
 										'Angular',
 										'NodeJs',
-										'Python Fast API',
+										'React',
 									];
 
 									// Create a function to display the typing animation for a given text
@@ -193,10 +193,12 @@
 								<br>
 								<br>
 								<h2>A Fullstack Developer</h2>
-								<h2 class="d-flex" style="margin-bottom: 0">With over 2.5 years of experience</h2>
+								<h2 class="d-flex" style="margin-bottom: 0">With over three years of experience</h2>
 								<!-- <br> -->
 								<p><a href="https://www.linkedin.com/in/anujkumardarji/"
 										class="btn btn-primary py-3 px-4" target="_blank">LinkedIn</a>
+										<a href="https://github.com/anujkumardarji/"
+										class="btn btn-primary py-3 px-4" target="_blank">Github</a>
 								</p>
 							</div>
 						</div>
@@ -269,7 +271,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 
-								<p>With over 2.5 years of comprehensive experience in the field During my time at
+								<p>With over three years of comprehensive experience in the field During my time at
 									Techivies solution pvt. ltd., I consistently demonstrated my ability to optimize
 									performance and exceed expectations. Whether it was collaborating with
 									cross-functional teams or spearheading projects independently, my dedication to
@@ -428,8 +430,8 @@
 
 			<div class="row justify-content-center mt-5">
 				<div class="col-md-6 text-center ftco-animate">
-					<p><a href="https://docs.google.com/document/d/1uHxZB4Z87udIPFJ48pTBOTO5zB073mo_aNENfaCrn3M/edit?usp=sharing"
-							class="btn btn-primary py-4 px-5">Download CV</a></p>
+					<p><a href="https://docs.google.com/document/d/1nITrBVRqgd-2eHSxseZMlino01WigFwRUMZa_vb1aDs/edit?usp=sharing"
+							class="btn btn-primary py-4 px-5" target="_blank" >Download CV</a></p>
 				</div>
 			</div>
 		</div>
@@ -480,7 +482,7 @@
 							<span class="icon-globe"></span>
 						</div>
 						<h3 class="mb-4">Download Resume</h3>
-						<p><a href="#">resumelink</a></p>
+						<p><a href="https://docs.google.com/document/d/1nITrBVRqgd-2eHSxseZMlino01WigFwRUMZa_vb1aDs/edit?usp=sharing" target="_blank">resumelink</a></p>
 					</div>
 				</div>
 			</div>
